grammar.js
    source_file: ($) => repeat($._declaration),
    _declaration: ($) =>
      choice(
        $.constantDeclaration,
        $.externDeclaration,
        $._typeDeclaration,
        $.parserDeclaration,
        $.controlDeclaration,
        $.preproc_include,
        $.instantiation,
        $.errorDeclaration,
        $.matchKindDeclaration,
        $.functionDeclaration
      ),
    typedefDeclaration: ($) =>
      seq("typedef", $._typeRef, field("name", $._name), ";"),
    prefixedType: ($) => choice($.IDENTIFIER, seq(".", $.IDENTIFIER)),
    _typeRef: ($) =>
      choice(
        $.baseType,
        $.typeName,
        $.specializedType,
        $.headerStackType,
        $.tupleType
      ),
    baseType: ($) =>
      choice(
        "bit",
        "bool",
        "error",
        "int",
        seq("bit", "<", $.IDENTIFIER, ">"), // added to parse c-style #define BLOOM_FILTER_ENTRIES 4096
        seq("int", "<", $.IDENTIFIER, ">"), // added to parse c-style #define BLOOM_FILTER_ENTRIES 4096
        seq("varbit", "<", $.IDENTIFIER, ">"), // added to parse c-style #define BLOOM_FILTER_ENTRIES 4096
        $.bitWithIntegerWidth,
        seq("int", "<", $.INTEGER, ">"),
        seq("varbit", "<", $.INTEGER, ">"),
        seq("bit", "<", "(", $._expression, ")", ">"),
        seq("int", "<", "(", $._expression, ")", ">"),
        seq("varbit", "<", "(", $._expression, ")", ">")
      ),
    bitWithIntegerWidth: ($) => seq("bit", "<", field("width", $.INTEGER), ">"),
    _expression: ($) =>
      choice(
        $.IDENTIFIER,
        $.TRUE,
        $.FALSE,
        $.INTEGER,
        seq(".", $.IDENTIFIER),
        seq($.IDENTIFIER, ".", $.IDENTIFIER),
        seq($._expression, "[", $._expression, "]"),
        seq("{", optional($.expressionList), "}"),
        seq($._expression, "[", $._expression, ":", $._expression, "]"),
        seq(
          $._expression,
          "<",
          $.realTypeArgumentList,
          ">",
          "(",
          optional($.argumentList),
          ")"
        ),
        seq("(", $._expression, ")"),
        prec.right(seq("!", $._expression)),
        prec.right(seq("~", $._expression)),
        prec.right(seq("-", $._expression)),
        prec.right(seq("+", $._expression)),
        prec.left(2, seq($._expression, ".", $._name)),
        prec.left(1, seq($.IDENTIFIER, ".", $.IDENTIFIER)),
        prec.left(2, seq($._expression, "(", optional($.argumentList), ")")),
        prec.left(
          3,
          alias(
            seq($._expression, "*", $._expression),
            $.MultiplicationExpression
          )
        ),
        prec.left(
          3,
          alias(seq($._expression, "/", $._expression), $.DivisionExpression)
        ),
        prec.left(
          3,
          alias(seq($._expression, "%", $._expression), $.RemainderExpression)
        ),
        prec.left(
          4,
          alias(seq($._expression, "+", $._expression), $.AdditionExpression)
        ),
        prec.left(4, seq($._expression, "-", $._expression)),
        prec.left(
          6,
          alias(seq($._expression, "<", $._expression), $.LessThanExpression)
        ),
        prec.left(
          6,
          alias(seq($._expression, ">", $._expression), $.GreaterThanExpression)
        ),
        prec.left(
          6,
          alias(
            seq($._expression, ">=", $._expression),
            $.GreaterThanOrEqualExpression
          )
        ),
        prec.left(
          6,
          alias(
            seq($._expression, "<=", $._expression),
            $.LessThanOrEqualExpression
          )
        ),
        prec.left(4, seq($._expression, "|+|", $._expression)),
        prec.left(4, seq($._expression, "|-|", $._expression)),
        prec.left(5, seq($._expression, "<<", $._expression)),
        prec.left(5, seq($._expression, ">>", $._expression)),
        prec.left(7, seq($._expression, "!=", $._expression)),
        prec.left(7, seq($._expression, "==", $._expression)),
        prec.left(8, seq($._expression, "&", $._expression)),
        prec.left(9, seq($._expression, "^", $._expression)),
        prec.left(10, seq($._expression, "|", $._expression)),
        prec.left(1, seq($._expression, "++", $._expression)),
        prec.left(11, seq($._expression, "&&", $._expression)),
        prec.left(12, seq($._expression, "||", $._expression)),
        prec.left(
          13,
          seq($._expression, "?", $._expression, ":", $._expression)
        ),
        prec.left(seq("(", $._typeRef, ")", $._expression))
      ),
    typeName: ($) => $.prefixedType,
    _name: ($) => $.IDENTIFIER,
